<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vector_settings"
            android:drawablePadding="10dp"
            android:padding="16dp"
            android:text="@string/settings_section_api"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_delete_processing"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_auto_delete_processing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_boost_mode"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_boost_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_bounding_boxes"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_bounding_boxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_detect_blur_response"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_detect_blur_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_is_production"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_is_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_confidence_details"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_confidence_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_parse_address"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_parse_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_external_id"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_external_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_na_value"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>