<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vector_settings"
            android:drawablePadding="10dp"
            android:padding="16dp"
            android:text="@string/settings_section_general"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_light_detection"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_stitch"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_stitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_allow_undetected_docs"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_submit_undetected_docs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_submit_document_capture"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_submit_documents_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_backup_docs_gallery"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_backup_docs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_return_stitched_pdf"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_stitched_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_close_camera_submit"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_close_camera_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_location_services"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_location_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_original_image_max_size"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_original_image_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_original_image_size"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>