<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vector_settings"
            android:drawablePadding="10dp"
            android:padding="16dp"
            android:text="@string/settings_section_image_processing"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_rotate"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_auto_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_doc_detection"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_auto_doc_detection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_blur_detection"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_blur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_skew_correction"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_skew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_auto_crop_gallery"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_auto_crop_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_gpu"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_gpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="-2dp"
                android:checked="true"
                android:paddingHorizontal="-2dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>